# mlms-studio

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Tiltfile  compose.yaml
.github/workflows/: cd.yml  ci.yml
data/: experiments.json
docs/adr/: 0001-internal-async-messaging.md  0002-metadata-and-bigtable-boundaries.md  (+4 more)
documentation/: Apresentação Defesa.pptx  Article_Improved.md  Dissertação Baseada Modelo_GE_PCC_2 (2).docx  Figure_Table_Spec_Submission.md  SourceForge Repository URL.rtf
matlab-code/: def_biomarker_structure.m  def_data_structure.m  def_feature_structure.m  def_gaopt.m  def_mm_selection_params.m  def_process.m  def_transform_structure.m  def_triang_fuzzy_hash.m  disp_biomarker_info.m  disp_wp_feature.m  dx2rawdata.m  find_biomarker_class.m  find_biomarker_correlation_based.m  find_biomarker_negative_correlation_based.m  find_biomarker_prob_based.m  find_biomarker_regression.m  find_biomarkers_prob_based.m  fitness_counting.m  fitness_fr.m  fitness_wp.m  fitness_wp_marked.m  fn_best_peaks_feature.m  fn_create_fuzzy_universe.m  fn_cross_validation_selector.m  fn_fcol.m  fn_fcorr.m  fn_find_peaks.m  fn_get_fr_cell_atrib.m  fn_inter_spectrum.m  fn_mmv_fuzzy.m  fn_norm_max_min.m  fn_percent_select_data.m  fn_pks_select.m  fn_pks_select_mm.m  fn_select_biomarkers.m  fn_selected_max_min.m  fn_sum_sins.m  fn_transform.m  fn_triang_fuzzy.m  fn_vet2mat.m  (+33 more)
projeto-web/: vite.config.ts
scripts/: md_draft_to_pdf.py
services/mlms-worker/: Cargo.toml  Dockerfile
services/mlms-worker/docs/: NODE_CONTRACT.md
services/mlms-worker/src/: main.rs
(+123 files in other folders)
